objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CA_Motivazione_KO__c</fullName>
        <label>Motivazione KO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Motivazioni_rifiuto__c</fullName>
        <label>Motivazioni rifiuto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negato Accesso Amministratore</fullName>
                    <color>#FF6600</color>
                    <label>Negato Accesso Amministratore</label>
                </value>
                <value>
                    <fullName>Negato Accesso Proprietà Privata</fullName>
                    <color>#990000</color>
                    <label>Negato Accesso Proprietà Privata</label>
                </value>
                <value>
                    <fullName>Attesa Assemblea</fullName>
                    <color>#78C953</color>
                    <label>Attesa Assemblea</label>
                </value>
                <value>
                    <fullName>Ingresso Primo Cliente</fullName>
                    <color>#33FF33</color>
                    <label>Ingresso Primo Cliente</label>
                </value>
                <value>
                    <fullName>Amministratore Sconosciuto/Irreperibile</fullName>
                    <color>#FF0000</color>
                    <label>Amministratore Sconosciuto/Irreperibile</label>
                </value>
                <value>
                    <fullName>Altro</fullName>
                    <color>#993399</color>
                    <label>Altro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Appuntamento__c</fullName>
        <label>Data Appuntamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Chiamata__c</fullName>
        <label>Data/Ora Chiamata</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Esito_della_chiamata__c</fullName>
        <label>Esito Della Chiamata</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positivo</fullName>
                </value>
                <value>
                    <fullName>Negativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fascia_Oraria_Appuntamento__c</fullName>
        <label>Fascia Oraria Appuntamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>08:30 - 10:30</fullName>
                </value>
                <value>
                    <fullName>11.30 - 13.30</fullName>
                </value>
                <value>
                    <fullName>14:30 - 16:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>